# biao

./: Cargo.toml  IMPLEMENTATION_CHECKLIST.md  MANIFEST.md  PROJECT_SUMMARY.md  README.md  TEMPLATES.md  TEMPLATE_GUIDE.md  TEMPLATE_IMPLEMENTATION.md  TEMPLATE_QUICK_REF.md  examples.toml  labels.toml
src/: cli.rs  client.rs  config.rs  error.rs  git.rs  main.rs  models.rs  templates.rs
templates/: area.toml  operational.toml  priority-prefixed.toml  priority.toml  semantic.toml  standard.toml  type.toml
templates/rusty/: area.toml  priority.toml
templates/type/: labels.toml
