[package]
name = "biao"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "biao"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
shellexpand = "2.1"
toml = "0.8"
clap_complete = "4.5.61"
